# nocap

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PRODUCT.md  README.md  carter.command  railway.json  run-carter.sh
backend/: .env.example  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2128f1bb6fa3_taxonomy_snapshot.py  61a7794b6040_entity_and_derived_run_params.py  7f7eed6fc5af_workflow_config_and_run.py  92f7dc097da1_facts_and_run_file.py  a1b2c3d4e5f6_dpm_source_form.py  a56f7faf3e96_merge_dpm_source_form_and_output_format_.py  a7b8c9d0e1f2_run_module_valid_window.py  a8c3e1d290f5_run_formula_summary.py  b2c3d4e5f6a7_run_taxonomy_version.py  b2c7e9d14a05_validation_rules_slot_and_table.py  b8d3f21a0c67_output_format_config.py  bd19b16b5b06_validation_findings_and_fact_source.py  c3d8f1a25b60_run_capabilities.py  c4e1a9d7b2f0_release_artifact_slots.py  c9e4b1f7a208_freeze_entity_values_and_release_fp.py  d3a71c9e4f52_system_storage_keys_and_release_deletion.py  d4f9a2c17e83_regulator_and_release_fk.py  d5f2b0e8c3a1_entity_workflow_config.py  e5b28d1c9a34_drop_run_entity_fk.py  e6a3c1f04b28_workflow_categories_and_run_keys.py  e7a1c3f9d245_remap_declaration_vocabulary.py  f1a2b3c4d5e6_module_version_selection.py  f439a10ebb3c_add_artifacts_missing_snapshot_status.py  f5845162cbcc_formula_validation_phase_and_run_status.py  f7b2d9c0a1e4_run_filing_indicators.py
backend/app/: main.py
backend/app/comparison/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_health.py
(+189 files in other folders)
